@@ -3,7 +3,7 @@
  * Displays a place hierachy
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2008  John Finlay and Others
+ * Copyright (C) 2002 to 2008  PGV Development Team. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -264,7 +264,6 @@ if ($display=="hierarchy") {
 			}
 		}
 	}
-//	print "<td class=\"center\" valign=\"top\">";
 
 	//-- create a string to hold the variable links and place names
 	$linklevels="";
